--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,19 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carried by Bees</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./index.js"></script>
 </head>
 
 <body class="bg-[#333333] text-white h-[100vh] w-full m-4">
-    <main class="flex flex-col h-full w-full justify-center items-center gap-y-8">
+    <main class="flex flex-col h-full w-full items-center gap-y-8">
         <img width="1000" height="1000" class="max-w-full h-auto" src="./assets/Bliss_fixed.png"
             alt="Photo of bandmates John Benda and Justin Klaas (Bliss album cover)" />
-        <div class="grid grid-flow-col gap-x-4 grid-cols-4 h-4 md:h-6">
-            <a target="_blank" href="https://open.spotify.com/album/5tGuHNvKJGT97QXkjDuHL8?si=AePd7DnBSX6L8hH4x8FRGw" class="h-full m-auto"><img class="h-full" src="./assets/spotify.png" /></a>
-            <a target="_blank" href="http://itunes.apple.com/album/id/1702315264" class="h-full m-auto"><img class="h-full" src="./assets/apple.svg" /></a>
-            <a target="_blank" href="https://www.instagram.com/carriedbybees" class="h-full m-auto"><img class="h-full" src="./assets/instagram.svg" /></a>
-            <a target="_blank" href="https://carriedbybees.bandcamp.com/album/bliss" class="h-full m-auto"><img class="h-full" src="./assets/bandcamp.png" /></a>
+        <div id="#social" class="grid grid-flow-col gap-x-8 grid-cols-4 h-6 md:h-10">
         </div>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"></script>
 </body>
 
 </html>
