--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,16 @@
     <title>Carried by Bees</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./index.js"></script>
 </head>
 
 <body class="bg-[#333333] text-white h-[100vh] w-full m-4">
     <main class="flex flex-col h-full w-full items-center gap-y-8">
         <img width="1000" height="1000" class="max-w-full h-auto" src="./assets/Bliss_fixed.png"
             alt="Photo of bandmates John Benda and Justin Klaas (Bliss album cover)" />
-        <div id="#social" class="grid grid-flow-col gap-x-8 grid-cols-4 h-6 md:h-10">
+        <div id="#social" class="grid grid-flow-col gap-x-8 grid-cols-4 h-6">
         </div>
     </main>
+    <script src="./index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"></script>
 </body>
 
