replaced margins with padding

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-[#333333] text-white h-[100vh] w-full m-6">
-    <main class="flex flex-col h-full w-full items-center gap-y-8 overflow-hidden">
+<body class="bg-[#333333] text-white h-[100vh] w-full">
+    <main class="flex flex-col h-full w-full items-center gap-y-8 overflow-hidden p-6">
         <img width="1000" height="1000" class="max-w-full h-auto" src="./assets/Bliss_fixed.png"
             alt="Photo of bandmates John Benda and Justin Klaas (Bliss album cover)" />
         <div id="#social" class="grid grid-flow-col gap-x-8 grid-cols-4 h-full">
