--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,29 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Carried by Bees, indie music, alternative rock, Kansas City band, John Benda, Justin Klaas">
+    <meta name="description" content="Longtime collaborators, John Benda and Justin Klaas formed Carried by Bees over three years ago. Bliss is their first proper release and released on July 14th of 2023">
+    <meta property="og:title" content="Carried by Bees">
+    <meta property="og:description" content="Longtime collaborators, John Benda and Justin Klaas formed Carried by Bees over three years ago. Bliss is their first proper release and released on July 14th of 2023">
+    <meta property="og:image" content="https://www.carriedbybees.com/assets/Bliss_fixed.png">
     <title>Carried by Bees</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-[#333333] text-white h-[100vh] w-full">
-    <main class="flex flex-col h-full w-full items-center gap-y-8 overflow-hidden p-6">
+<body class="bg-[#333333] text-white h-[100vh] w-full" style="font-family: 'Roboto', sans-serif;">
+    <main class="flex flex-col h-full w-full items-center gap-y-8 divide-y divide-white">
         <img width="1000" height="1000" class="max-w-full h-auto" src="./assets/Bliss_fixed.png"
             alt="Photo of bandmates John Benda and Justin Klaas (Bliss album cover)" />
-        <div id="#social" class="grid grid-flow-col gap-x-8 grid-cols-4 h-full">
+        <div id="#social" class="grid grid-flow-col gap-x-8 grid-cols-4 h-full pt-8">
         </div>
     </main>
+    <div class="flex justify-center pb-6">
+        <p>All rights reserved © 2023</p>
+    </div>
     <script src="./index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"></script>
 </body>
