replaced div with semantic name, added aria-label

--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,12 @@
     <main class="flex flex-col h-full w-full items-center gap-y-8 divide-y divide-white">
         <img width="1000" height="1000" class="max-w-full h-auto" src="./assets/Bliss_fixed.png"
             alt="Photo of bandmates John Benda and Justin Klaas (Bliss album cover)" />
-        <div id="#social" class="grid grid-flow-col gap-x-8 grid-cols-4 h-full pt-8">
-        </div>
+        <section aria-label="social media and music links" id="#social" class="grid grid-flow-col gap-x-8 grid-cols-4 h-full pt-8">
+        </section>
     </main>
-    <div class="flex justify-center pb-6">
+    <footer class="flex justify-center pb-6">
         <p>All rights reserved © 2023</p>
-    </div>
+    </footer>
     <script src="./index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"></script>
 </body>
