--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,13 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Carried by Bees, indie music, alternative rock, Kansas City band, John Benda, Justin Klaas">
-    <meta name="description" content="Longtime collaborators, John Benda and Justin Klaas formed Carried by Bees over three years ago. Bliss is their first proper release and released on July 14th of 2023">
+    <meta name="keywords"
+        content="Carried by Bees, indie music, alternative rock, Kansas City band, John Benda, Justin Klaas">
+    <meta name="description"
+        content="Longtime collaborators John Benda and Justin Klaas formed Carried by Bees over three years ago. Bliss is their first proper release and released on July 14th of 2023">
     <meta property="og:title" content="Carried by Bees">
-    <meta property="og:description" content="Longtime collaborators, John Benda and Justin Klaas formed Carried by Bees over three years ago. Bliss is their first proper release and released on July 14th of 2023">
+    <meta property="og:description"
+        content="Longtime collaborators John Benda and Justin Klaas formed Carried by Bees over three years ago. Bliss is their first proper release and released on July 14th of 2023">
     <meta property="og:image" content="https://www.carriedbybees.com/assets/Bliss_fixed.png">
     <title>Carried by Bees</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,15 +20,20 @@
 </head>
 
 <body class="bg-[#333333] text-white h-[100vh] w-full" style="font-family: 'Roboto', sans-serif;">
-    <main class="flex flex-col h-full w-full items-center gap-y-8 divide-y divide-white">
-        <img width="1000" height="1000" class="max-w-full h-auto" src="./assets/Bliss_fixed.png"
-            alt="Photo of bandmates John Benda and Justin Klaas (Bliss album cover)" />
-        <section aria-label="social media and music links" id="#social" class="grid grid-flow-col gap-x-8 grid-cols-4 h-full pt-8">
-        </section>
+    <main class="flex flex-col h-full w-full items-center gap-8 p-8">
+        <div class="max-w-[1000px] w-full">
+            <img width="1000" height="1000" class="max-w-full h-auto" src="./assets/Bliss_fixed.png"
+                alt="Photo of bandmates John Benda and Justin Klaas (Bliss album cover)" />
+            <article class="pt-8 pb-12">
+                Longtime collaborators John Benda and Justin Klaas formed Carried by Bees over three years ago. Bliss
+                is their first proper release and released on July 14th of 2023
+            </article>
+            <div class="border-t border-white pt-12"></div>
+            <section aria-label="social media and music links" id="social"
+                class="grid grid-flow-col gap-x-8 grid-cols-4 h-full">
+            </section>
+        </div>
     </main>
-    <footer class="flex justify-center pb-6">
-        <p>All rights reserved © 2023</p>
-    </footer>
     <script src="./index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"></script>
 </body>
