--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
 </head>
 
 <body class="bg-[#333333] text-white h-[100vh] w-full" style="font-family: 'Roboto', sans-serif;">
-    <main class="flex flex-col h-full w-full items-center gap-8 p-8">
-        <div class="max-w-[1000px] w-full">
-            <img width="1000" height="1000" class="max-w-full h-auto" src="./assets/Bliss_fixed.png"
+    <main class="flex flex-col h-full w-full items-center gap-8 p-4 md:p-8">
+        <div class="max-w-[1200px] w-full">
+            <img width="1200" height="1200" class="max-w-full h-auto" src="./assets/Bliss_fixed.png"
                 alt="Photo of bandmates John Benda and Justin Klaas (Bliss album cover)" />
             <article class="pt-8 pb-12">
                 Longtime collaborators John Benda and Justin Klaas formed Carried by Bees over three years ago. Bliss
